--- a/sass/layout/_sec2.scss
+++ b/sass/layout/_sec2.scss
@@ -11,13 +11,13 @@ letter-spacing: 0.03em;
 margin-bottom: 50px;
 }
 
-.section-2-list {
+.section-2__pictures {
     display: flex;
     justify-content: center;
     gap: 30px;
 }
 
-.section-2-card {
+.section-2__card {
     position: relative;
 }
 
