--- a/sass/layout/_sec3.scss
+++ b/sass/layout/_sec3.scss
@@ -2,7 +2,7 @@
     background-color: var(--secondary-bgr-color);
 }
 
-.section-3-title {
+.team__title {
 font-weight: 700;
 font-size: 36px;
 line-height: 1.16;
@@ -11,7 +11,7 @@ letter-spacing: 0.03em;
 margin-bottom: 50px;
 }
 
-.section-3-name {
+.team_name {
 font-weight: 500;
 font-size: 16px;
 line-height: 1.18;
@@ -19,13 +19,13 @@ text-align: center;
 letter-spacing: 0.03em;
 }
 
-.section-3-list {
+.team__list {
     display: flex;
     justify-content: center;
     gap: 30px;
 }
 
-.section-3-list-item {
+.team__item {
 
     background-color: var(--main-light-color);
     border-radius: 5px;
@@ -33,7 +33,7 @@ letter-spacing: 0.03em;
 }
 
 
-.section-3-text {
+.team__text {
 font-weight: 400;
 font-size: 16px;
 line-height: 1.18;
@@ -50,7 +50,7 @@ margin-bottom: 16px;
     padding-bottom: 30px;
 }
 
-.section-3-soc {
+.team__soc {
     display: flex;
     justify-content: center;
     gap: 10px;
