--- a/css/main.css
+++ b/css/main.css
@@ -359,7 +359,7 @@ address {
   margin-bottom: 50px;
 }
 
-.team_name {
+.team__name {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
@@ -401,7 +401,7 @@ address {
   gap: 10px;
 }
 
-.section-3-soc-link {
+.team__link {
   width: 44px;
   height: 44px;
   border-radius: 50%;
@@ -410,7 +410,7 @@ address {
   justify-content: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 125ms;
 }
-.section-3-soc-link:hover, .section-3-soc-link:focus {
+.team__link:hover, .team__link:focus {
   background-color: #2196F3;
 }
 
@@ -418,7 +418,7 @@ address {
   fill: #AFB1B8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1) 125ms;
 }
-.section-3-soc-link:hover .section-3-soc-icon, .section-3-soc-link:focus .section-3-soc-icon {
+.team__link:hover .section-3-soc-icon, .team__link:focus .section-3-soc-icon {
   fill: #FFFFFF;
 }
 
