--- a/sass/layout/_sec3.scss
+++ b/sass/layout/_sec3.scss
@@ -11,7 +11,7 @@ letter-spacing: 0.03em;
 margin-bottom: 50px;
 }
 
-.team_name {
+.team__name {
 font-weight: 500;
 font-size: 16px;
 line-height: 1.18;
@@ -56,7 +56,7 @@ margin-bottom: 16px;
     gap: 10px;
 }
 
-.section-3-soc-link {
+.team__link {
     width: 44px;
     height: 44px;
     border-radius: 50%;
@@ -72,8 +72,8 @@ margin-bottom: 16px;
 .section-3-soc-icon{
     fill: #AFB1B8;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1) 125ms;
-.section-3-soc-link:hover &,
-.section-3-soc-link:focus & {
+.team__link:hover &,
+.team__link:focus & {
     fill: #FFFFFF;
     
 }
